--- a/scss/pages/_photographer.scss
+++ b/scss/pages/_photographer.scss
@@ -753,7 +753,7 @@ $text-dark: #111;
         .contact-list {
             display: flex;
             flex-direction: column;
-            align-items: left;
+            align-items: start;
             gap: 2.4rem;
             margin-top: 3.2rem;
 
@@ -1616,6 +1616,8 @@ $text-dark: #111;
             }
 
             .hero-text {
+                gap: 1.5rem;
+
                 p {
                     font-size: var(--text-xs);
                 }
@@ -1629,6 +1631,9 @@ $text-dark: #111;
             img {
                 max-width: calc(100% / 6 - 2rem);
 
+                &:nth-child(odd) {
+                    transform: translateY(-3.2rem);
+                }
             }
         }
 
